Fix role column on team grid too short

--- a/src/styles/pages/Members.module.scss
+++ b/src/styles/pages/Members.module.scss
@@ -61,7 +61,7 @@
 *************/
 
 .memberTabler {
-  @include entityTabler(4% 15% 4% 0.6fr minmax(150px, 0) 1fr 0.8fr 4% 4% 4%);
+  @include entityTabler(4% 15% 4% 0.6fr 1.3fr 1fr 0.8fr 4% 4% 4%);
 }
 
 .userTabler {
